--- a/springcloud_parent/eureka_server/src/main/resources/application.yml
+++ b/springcloud_parent/eureka_server/src/main/resources/application.yml
@@ -1,16 +1,19 @@
 server:
-  port: 10086
-
-
+  port: ${port:10086}
 spring:
   application:
-    name: eureka_server
+    name: eureka-server
 eureka:
   client:
-    allow-redirects: false
     service-url:
-      defaultZone: http://127.0.0.1:10086/eureka
-    fetch-registry: false
-  server:
-    eviction-interval-timer-in-ms: 60000
-    enable-self-preservation: false
+      # eureka 服务地址，如果是集群的话；需要指定其它集群eureka地址
+      defaultZone: ${defaultZone:http://127.0.0.1:10086/eureka}
+    # 不注册自己
+#    register-with-eureka: true
+#    # 不拉取服务
+#    fetch-registry: true
+#  server:
+#    # 服务失效剔除时间间隔，默认60秒
+#    eviction-interval-timer-in-ms: 60000
+#    # 关闭自我保护模式（默认是打开的）
+#    enable-self-preservation: false
