--- a/springcloud_parent/springcloud_consumer/src/main/resources/application.yml
+++ b/springcloud_parent/springcloud_consumer/src/main/resources/application.yml
@@ -7,6 +7,6 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:10086/eureka
+      defaultZone: http://127.0.0.1:10086/eureka,http://127.0.0.1:10087/eureka
     # 获取服务地址列表间隔时间，默认30秒
     registry-fetch-interval-seconds: 10
