--- a/springcloud_parent/pom.xml
+++ b/springcloud_parent/pom.xml
@@ -11,6 +11,8 @@
     <module>springcloud_service</module>
     <module>springcloud_consumer</module>
     <module>eureka_server</module>
+      <module>Gateway</module>
+      <module>springcloud_config</module>
   </modules>
   <packaging>pom</packaging>
 
